euphony-dsp/src/snapshots/euphony_dsp__env__Lag.snap
---
source: euphony-dsp/src/env.rs
expression: node
---
Node {
    name: "Lag",
    module: [
        "env",
    ],
    impl_path: "euphony_dsp::env",
    id: 202,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "duration",
            id: 1,
            trigger: true,
            default: 0.01,
        },
    ],
    buffers: [],
    docs: "",
}
