euphony-dsp/src/snapshots/euphony_dsp__env__Linear.snap
---
source: euphony-dsp/src/env.rs
expression: node
---
Node {
    name: "Linear",
    module: [
        "env",
    ],
    impl_path: "euphony_dsp::env",
    id: 200,
    inputs: [
        Input {
            name: "target",
            id: 0,
            trigger: true,
            default: 0.0,
        },
        Input {
            name: "duration",
            id: 1,
            trigger: true,
            default: 0.01,
        },
        Input {
            name: "value",
            id: 2,
            trigger: true,
            default: 0.0,
        },
    ],
    docs: "",
}
