euphony-dsp/src/snapshots/euphony_dsp__env__Select.snap
---
source: euphony-dsp/src/env.rs
expression: node
---
Node {
    name: "Select",
    module: [
        "env",
    ],
    impl_path: "euphony_dsp::env",
    id: 201,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "a",
            id: 1,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "b",
            id: 2,
            trigger: false,
            default: 0.0,
        },
    ],
    buffers: [],
    docs: "",
}
